--- a/DigitRecognitionSample/Packages/manifest.json
+++ b/DigitRecognitionSample/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.sentis": "1.2.0-exp.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
