--- a/BoardGameAISample/Packages/manifest.json
+++ b/BoardGameAISample/Packages/manifest.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.sentis": "1.3.0-pre.3",
+    "com.unity.sentis": "2.1.0",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
