--- a/DepthEstimationSample/Packages/manifest.json
+++ b/DepthEstimationSample/Packages/manifest.json
@@ -7,7 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.recorder": "5.0.0",
     "com.unity.render-pipelines.universal": "16.0.4",
-    "com.unity.sentis": "1.3.0-pre.3",
+    "com.unity.sentis": "2.1.0",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
