--- a/BoardGameAISample/Packages/manifest.json
+++ b/BoardGameAISample/Packages/manifest.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.0",
+    "com.unity.ai.inference": "2.2.0",
+    "com.unity.ai.navigation": "2.0.6",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.sentis": "2.1.0",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
