--- a/DepthEstimationSample/Packages/manifest.json
+++ b/DepthEstimationSample/Packages/manifest.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "2.0.0",
-    "com.unity.collab-proxy": "2.2.0",
+    "com.unity.ai.inference": "2.2.0",
+    "com.unity.ai.navigation": "2.0.6",
+    "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.ide.rider": "3.0.26",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.recorder": "5.0.0",
-    "com.unity.render-pipelines.universal": "16.0.4",
-    "com.unity.sentis": "2.1.0",
-    "com.unity.test-framework": "1.3.9",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.recorder": "5.1.2",
+    "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.test-framework": "1.4.6",
+    "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.8.0",
+    "com.unity.visualscripting": "1.9.5",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
