--- a/ChatSample/Packages/manifest.json
+++ b/ChatSample/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ai.inference": "2.3.0",
+    "com.unity.ide.rider": "3.0.36",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
