--- a/ChatSample/Packages/manifest.json
+++ b/ChatSample/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.inference": "2.3.0",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
