--- a/TextToSpeechSample/Packages/manifest.json
+++ b/TextToSpeechSample/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.inference": "2.3.0",
     "com.unity.ai.navigation": "2.0.6",
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.ide.rider": "3.0.31",
